arreglo de los test case

--- a/src/main/webapp/META-INF/database.properties
+++ b/src/main/webapp/META-INF/database.properties
@@ -14,6 +14,6 @@
 
 database.dialect=org.hibernate.dialect.MySQLDialect
 database.driverClassName=com.mysql.jdbc.Driver
-database.url=jdbc:mysql://127.0.0.1:3306/salon_de_ventas
+database.url=jdbc:mysql://localhost:3306/salon_de_ventas
 database.username=root
 database.password=1234
