--- a/TelosysTools/templates/persistence-jpa-TT210-R2/templates.cfg
+++ b/TelosysTools/templates/persistence-jpa-TT210-R2/templates.cfg
@@ -18,7 +18,7 @@ pom_dependencies_common.txt          ; pom_dependencies_common.txt          ;   
 # Entities classes ( with composite key classes if any )
 JPA entity (with links)        ; ${BEANNAME}Entity.java             ; ${SRC}/${ENTITY_PKG}/jpa              ; jpa_bean_with_links.vm    ; *
 
-Entity mock tool               ; ${BEANNAME}EntityMock.java         ; ${SRC}/${ROOT_PKG}/mock           ; bean_mock.vm    ; *
+Entity mock tool               ; ${BEANNAME}EntityMock.java         ; ${TEST_SRC}/${ROOT_PKG}/mock           ; bean_mock.vm    ; *
 
 # Entities persistence services classes
 Persistence service interface   ; ${BEANNAME}Persistence.java    ; ${SRC}/${ROOT_PKG}/services/persistence     ; persistence_service.vm      ; *
@@ -36,7 +36,7 @@ persistence.xml                ; persistence.xml                 ; ${RES}/META-I
 Persistence configuration      ; PersistenceConfig.java          ; ${SRC}/${ROOT_PKG}/services/persistence/commons/jpa              ; env/PersistenceConfig.vm          ; 1
 Persistence service provider   ; PersistenceServiceProvider.java ; ${SRC}/${ROOT_PKG}/services/persistence/commons/jpa              ; env/PersistenceServiceProvider.vm ; 1
 
-Mock values class              ; MockValues.java                 ; ${SRC}/${ROOT_PKG}/mock/tool                ; env/MockValues.vm         ; 1
+Mock values class              ; MockValues.java                 ; ${TEST_SRC}/${ROOT_PKG}/mock/tool                ; env/MockValues.vm         ; 1
 
 FAKE generic service  class    ; GenericFakeService.java         ; ${SRC}/${ROOT_PKG}/persistence/commons/fake ; env/GenericFakeService.vm         ; 1
 
