--- a/TelosysTools/templates/server-rest-jersey-spring-hibernate/templates.cfg
+++ b/TelosysTools/templates/server-rest-jersey-spring-hibernate/templates.cfg
@@ -21,3 +21,4 @@ Servicio Implement.java ; ${BEANNAME}ServiceImpl.java ; ${SRC}/${ROOT_PKG}/servi
 IControlador.java ; Controller.java ; ${SRC}/${ROOT_PKG}/controlador ; java_controlador/generic_controlador.vm ; 1
 Controller Entity.java ; ${BEANNAME}Controller.java ; ${SRC}/${ROOT_PKG}/controlador ; java_controlador/controlador_java.vm ; *
 Controller Implement.java ; ${BEANNAME}ControllerImpl.java ; ${SRC}/${ROOT_PKG}/controlador/impl ; java_controlador/controlador_java_impl.vm ; *
+Controller Test.java ; ${BEANNAME}ControllerImplTest.java ; ${TEST_SRC}/${ROOT_PKG}/controlador/impl ; java_controlador/controlador_test.vm ; *
