--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -26,7 +26,7 @@
 		<servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
 		<init-param>
 			<param-name>javax.ws.rs.Application</param-name>
-			<param-value>org.salondeventas.server.controlador.impl.Application</param-value>
+			<param-value>org.salondeventas.server.controlador.impl.MyApplication</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
@@ -34,5 +34,8 @@
 		<servlet-name>JerseyService</servlet-name>
 		<url-pattern>/*</url-pattern>
 	</servlet-mapping>
+	<welcome-file-list>  
+        <welcome-file>index.html</welcome-file>  
+    </welcome-file-list>
 
 </web-app>	
