creacion de stock mejoras de templates

--- a/TelosysTools/templates/server-rest-jersey-spring-hibernate/templates.cfg
+++ b/TelosysTools/templates/server-rest-jersey-spring-hibernate/templates.cfg
@@ -2,15 +2,20 @@
 
 // Name ; Output filename ; Output dir ; Template file ; Occurrences
 JPA entity (with links)        ; ${BEANNAME}Entity.java             ; ${SRC}/${ENTITY_PKG}/jpa              ; entity/jpa_bean_with_links.vm    ; *
-Jxml ; Panel${BEANNAME}.fxml ; ${SRC}/${ROOT_PKG}/desktop/view ; javafx-fxml/pantallas/ENTITY_fxml.vm ; *
-Jxml_java ; Panel${BEANNAME}.java ; ${SRC}/${ROOT_PKG}/desktop/view ; javafx-fxml/pantallas/ENTITY_java.vm ; *
-Principal.fxml ; Principal.fxml ; ${SRC}/${ROOT_PKG}/desktop/view ; javafx-fxml/menu/principal_fxml.vm ; 1
-Principal.java ; Principal.java ; ${SRC}/${ROOT_PKG}/desktop/view ; javafx-fxml/menu/principal_java.vm ; 1
 
-//DAO
-Generic Dao Hibernate.java ; GenericDAOWithHibernate.java ; ${SRC}/${ROOT_PKG}/dao ; jpa-hibernate/generic_dao.vm ; 1
-Dao entity.java ; I${BEANNAME}DAO.java ; ${SRC}/${ROOT_PKG}/dao ; jpa-hibernate/jpa_dao.vm ; *
-Dao implement.java ; ${BEANNAME}DAO.java ; ${SRC}/${ROOT_PKG}/dao/impl ; jpa-hibernate/jpa_dao_impl.vm ; *
+# JPA
+persistence.xml                ; persistence.xml                 ; ${RES}/META-INF                             ; jpa-hibernate/env/persistence_xml.vm    ; 1
+
+# Entities persistence services classes
+Persistence service interface   ; ${BEANNAME}Persistence.java    ; ${SRC}/${ROOT_PKG}/services/persistence     ; jpa-hibernate/persistence_service.vm      ; *
+Persistence service implem. JPA ; ${BEANNAME}PersistenceJPA.java ; ${SRC}/${ROOT_PKG}/services/persistence/jpa ; jpa-hibernate/persistence_service_jpa.vm  ; *
+
+Persistence configuration      ; PersistenceConfig.java          ; ${SRC}/${ROOT_PKG}/services/persistence/commons/jpa  ; jpa-hibernate/env/PersistenceConfig.vm          ; 1
+Persistence service provider   ; PersistenceServiceProvider.java ; ${SRC}/${ROOT_PKG}/services/persistence/commons/jpa  ; jpa-hibernate/env/PersistenceServiceProvider.vm ; 1
+JPA environments class         ; JpaEnvironments.java            ; ${SRC}/${ROOT_PKG}/services/persistence/commons/jpa  ; jpa-hibernate/env/JpaEnvironments.vm         ; 1
+JPA environment class          ; JpaEnvironment.java             ; ${SRC}/${ROOT_PKG}/services/persistence/commons/jpa  ; jpa-hibernate/env/JpaEnvironment.vm          ; 1
+JPA operation interface        ; JpaOperation.java               ; ${SRC}/${ROOT_PKG}/services/persistence/commons/jpa  ; jpa-hibernate/env/JpaOperation.vm            ; 1
+JPA generic service class      ; GenericJpaService.java          ; ${SRC}/${ROOT_PKG}/services/persistence/commons/jpa  ; jpa-hibernate/env/GenericJpaService.vm       ; 1
 
 //Servicio
 Servicio.java ; Service.java ; ${SRC}/${ROOT_PKG}/services ; java_servicio/generic_servicio.vm ; 1
@@ -22,3 +27,22 @@ IControlador.java ; Controller.java ; ${SRC}/${ROOT_PKG}/controlador ; java_cont
 Controller Entity.java ; ${BEANNAME}Controller.java ; ${SRC}/${ROOT_PKG}/controlador ; java_controlador/controlador_java.vm ; *
 Controller Implement.java ; ${BEANNAME}ControllerImpl.java ; ${SRC}/${ROOT_PKG}/controlador/impl ; java_controlador/controlador_java_impl.vm ; *
 Controller Test.java ; ${BEANNAME}ControllerImplTest.java ; ${TEST_SRC}/${ROOT_PKG}/controlador/impl ; java_controlador/controlador_test.vm ; *
+
+# -----------------------------------------------------------------------------------------------------
+# Informes
+Informes JPA entity       ; ${BEANNAME}Entity.java             ; ${SRC}/${ENTITY_PKG}/informe/jpa              ; informes/entity/informe_bean_with_links.vm    ; *
+
+# Entities persistence services classes
+Informes Persistence service interface   ; ${BEANNAME}Persistence.java    ; ${SRC}/${ROOT_PKG}/services/persistence     ; informes/jpa-hibernate/informe_persistence_service.vm      ; *
+Informes Persistence service implem. JPA ; ${BEANNAME}PersistenceJPA.java ; ${SRC}/${ROOT_PKG}/services/persistence/jpa ; informes/jpa-hibernate/informe_persistence_service_jpa.vm  ; *
+
+# Servicio
+Informes Servicio.java ; ServiceInforme.java ; ${SRC}/${ROOT_PKG}/services ; informes/java_servicio/informe_generic_servicio.vm ; 1
+Informes Service Entity.java ; ${BEANNAME}Service.java ; ${SRC}/${ROOT_PKG}/services ; informes/java_servicio/informe_servicio_java.vm ; *
+Informes Servicio Implement.java ; ${BEANNAME}ServiceImpl.java ; ${SRC}/${ROOT_PKG}/services/impl ; informes/java_servicio/informe_servicio_java_impl.vm ; *
+
+# Controlador
+Informes IControlador.java ; ControllerInforme.java ; ${SRC}/${ROOT_PKG}/controlador ; informes/java_controlador/informe_generic_controlador.vm ; 1
+Informes Controller Entity.java ; ${BEANNAME}Controller.java ; ${SRC}/${ROOT_PKG}/controlador ; informes/java_controlador/informe_controlador_java.vm ; *
+Informes Controller Implement.java ; ${BEANNAME}ControllerImpl.java ; ${SRC}/${ROOT_PKG}/controlador/impl ; informes/java_controlador/informe_controlador_java_impl.vm ; *
+Informes Controller Test.java ; ${BEANNAME}ControllerImplTest.java ; ${TEST_SRC}/${ROOT_PKG}/controlador/impl ; informes/java_controlador/informe_controlador_test.vm ; *
